<resources>
    <string name="app_name">RemoteSMS Telegram</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-in</string>
    <string name="sync_sms_s">Sync SMS/s</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="new_sms">New SMS</string>
    <string name="save">Save</string>
    <string name="sms_s_to_upload_form">SMS/s to upload form</string>
    <string name="sms_sender">SMS Sender</string>
    <string name="bot_token">xxxxxxxxxx:xxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="verify">Verify!</string>
    <string name="rmtsms_bot">\@RmtSMS_bot</string>
    <string name="rmtsms_des">Send The following\ntext to RemoteSMS bot</string>
    <string name="then_hit_verify">Then hit Verify</string>
</resources>
